# BangumiBot

./: .gitignore  .gitmodules  LICENSE  create_graph.py  pyproject.toml  raw_data_reader.py  update_database.py
